--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,5 @@
     "extends": [
         "@rocketseat/eslint-config/node"
     ],
-    "rules": {
-    	"semi": ["error", "always"]
+    "semi": false
   }
-}
